# 1126_mp4_gps_4g_imu

./: CMakeLists.txt  README.md  ai.pcm  test.h264
include/: app_comm.h  simple_ftp_uploader.h
lib/: libeasymedia.so.1  libeasymedia.so.1.0.1  libmp4v2.so.2
opencv/include/opencv4/opencv2/: cvconfig.h
opencv/lib/: libopencv_features2d.so.4.5.4  libopencv_flann.so.4.5.4  libopencv_highgui.so.4.5.4  libopencv_imgcodecs.so.4.5.4  libopencv_ml.so.4.5.4  libopencv_photo.so.4.5.4  libopencv_stitching.so.4.5.4  libopencv_video.so.4.5.4  libopencv_videoio.so.4.5.4
opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: app.cc  app.for_ref  audio.cc  cv_demo.cc  imu_test.cpp  mp4_codec_process.cc  simple_ftp_uploader.cc  upload_demo.cc  uploader.cc  utils.cc  vi_rga_venc.cc  video.cc
wasted/: ai_test.cc  main.cc
